# single-repo-python

./: .gitignore  .pre-commit-config.yaml  Doxyfile  Justfile  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/actions/setup-docker/: action.yaml
.github/actions/setup-just/: action.yaml
.github/workflows/: PR.yaml  doxygen.yaml  integration-end_testing.yaml  lint.yaml  template-sync.yaml  unit_testing.yaml
example_library/: __init__.py  cache.py  version.py
examples/: numpy_cache.py  pickle_cache.py  version.py
